[gd_scene load_steps=15 format=3 uid="uid://ca4lpkrw027nn"]

[ext_resource type="Texture2D" uid="uid://bp7wy43toi1pg" path="res://sprites/ak-47/ak-47-base.png" id="1_mm34q"]
[ext_resource type="Script" path="res://scripts/ak-47.gd" id="1_pvrhg"]
[ext_resource type="Texture2D" uid="uid://cu33c2trme6k7" path="res://sprites/ak-47/mag.png" id="2_1we4r"]
[ext_resource type="PackedScene" uid="uid://2nm3lax5bshq" path="res://scenes/ak-47/shell.tscn" id="2_upjsr"]
[ext_resource type="Texture2D" uid="uid://bxyq6gswpy4ul" path="res://sprites/ak-47/bolt.png" id="3_u6lxq"]
[ext_resource type="PackedScene" uid="uid://b0bxe3gpgi154" path="res://scenes/UI/camera.tscn" id="4_gemee"]
[ext_resource type="Texture2D" uid="uid://ca7v2s2k1ummf" path="res://sprites/ak-47/mag-background.png" id="4_uoxs5"]
[ext_resource type="PackedScene" uid="uid://cpjons5plii23" path="res://scenes/ak-47/Mag.tscn" id="5_dh3ds"]
[ext_resource type="PackedScene" uid="uid://4qjdh10o1oy" path="res://scenes/UI/label_of_player.tscn" id="6_c6o0t"]
[ext_resource type="PackedScene" uid="uid://b6pnw0nutsac3" path="res://scenes/ak-47/bullet.tscn" id="7_ocxwt"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_3sdts"]
rough = true
absorbent = true

[sub_resource type="Animation" id="Animation_aklhc"]
resource_name = "shoot"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Bolt:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0001, 0.0002, 0.0364501, 0.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-9, -15), Vector2(-10, -16), Vector2(-9, -15), Vector2(-30, -15), Vector2(-9, -15)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t55ya"]
_data = {
"shoot": SubResource("Animation_aklhc")
}

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_ga1u4"]
properties/0/path = NodePath(".:rotation")
properties/0/spawn = true
properties/0/sync = true
properties/0/watch = true
properties/1/path = NodePath(".:angular_velocity")
properties/1/spawn = true
properties/1/sync = true
properties/1/watch = true
properties/2/path = NodePath(".:custom_integrator")
properties/2/spawn = true
properties/2/sync = true
properties/2/watch = true
properties/3/path = NodePath("Bolt:position")
properties/3/spawn = true
properties/3/sync = true
properties/3/watch = true
properties/4/path = NodePath(".:pos")
properties/4/spawn = true
properties/4/sync = true
properties/4/watch = true

[node name="ak-47" type="RigidBody2D" groups=["Player"]]
collision_layer = 3
collision_mask = 3
mass = 0.05
inertia = 1000.0
physics_material_override = SubResource("PhysicsMaterial_3sdts")
gravity_scale = 0.0
angular_damp_mode = 1
script = ExtResource("1_pvrhg")
bulletScene = ExtResource("7_ocxwt")
shellScene = ExtResource("2_upjsr")
cameraScene = ExtResource("4_gemee")
magScene = ExtResource("5_dh3ds")
labelScene = ExtResource("6_c6o0t")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2(-2, 2)
scale = Vector2(1.2, 1.15)
polygon = PackedVector2Array(-94.1667, -11.7391, -94.1667, 15.6522, -52.5, -3.47826, -45, -0.869565, -48.3333, 19.1304, -39.1667, 19.1304, -32.5, 0, 11.6667, -1.73913, 100, -7.82609, 60, -19.1304, 38.3333, -21.7391, 2.5, -20.8696, -20.8333, -20.8696, -42.5, -19.1304, -46.6667, -17.3913, -49.1667, -14.7826)

[node name="Ak-47-base" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(0.688545, -1.74997)
scale = Vector2(0.394928, 0.394928)
texture = ExtResource("1_mm34q")

[node name="Mag" type="Sprite2D" parent="."]
position = Vector2(-5.46366, 15.5)
scale = Vector2(0.355691, 0.355691)
texture = ExtResource("2_1we4r")

[node name="Position" type="Node2D" parent="Mag"]
rotation = 2.6337

[node name="Mag-Polygon" type="CollisionPolygon2D" parent="."]
position = Vector2(-5.5, 18)
scale = Vector2(1.55, 1.8)
polygon = PackedVector2Array(-8.06452, -12.2222, 1.6129, -12.2222, 2.25806, -5.55556, 5.48387, 0.555555, 10.6452, 6.11111, 2.90323, 10, -5.48387, 2.77778, -8.70968, -4.44444)

[node name="Bolt" type="Sprite2D" parent="."]
position = Vector2(-9, -15)
scale = Vector2(0.436145, 0.418174)
texture = ExtResource("3_u6lxq")

[node name="Bolt-Background" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(-9, -15)
scale = Vector2(0.434211, 0.434211)
texture = ExtResource("4_uoxs5")

[node name="Barrel" type="Node2D" parent="."]
position = Vector2(118.536, -9.49996)
rotation = 1.5708

[node name="Back_of_gun" type="Node2D" parent="."]
position = Vector2(-113.464, -9.49996)

[node name="TimerToShoot" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_t55ya")
}

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
process_mode = 3
replication_config = SubResource("SceneReplicationConfig_ga1u4")
visibility_update_mode = 1

[node name="BoltPosition" type="Node2D" parent="."]
position = Vector2(-9, -16)
rotation = -1.22173

[node name="TimerToReload" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Line2D" type="Line2D" parent="."]
visible = false
position = Vector2(119, -9.4)
scale = Vector2(1, 0.166667)
points = PackedVector2Array(-1, -0.6, 5000, -0.6)
width = 20.0
default_color = Color(1, 0, 0, 1)

[connection signal="timeout" from="TimerToShoot" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="TimerToReload" to="." method="_on_timer_to_reload_timeout"]
